@@ -4,7 +4,7 @@
 
 	<groupId>dsol</groupId>
 	<artifactId>dsol-base</artifactId>
-	<version>3.0.0-SNAPSHOT</version>
+	<version>3.0.0</version>
 	<packaging>pom</packaging>
 
 	<name>DSOL version 3</name>
@@ -59,7 +59,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<dsol-version>3.0.0-SNAPSHOT</dsol-version>
+		<dsol-version>3.0.0</dsol-version>
 		<junit.version>4.11</junit.version>
 		<java3d.version>1.5.1</java3d.version>
 		<jcommon.version>1.0.21</jcommon.version>
@@ -79,11 +79,31 @@
 		<outputDirectory>${basedir}/target/classes</outputDirectory>
 		<testOutputDirectory> ${basedir}/target/test-classes</testOutputDirectory>
 
+		<resources>
+			<resource>
+				<directory>${basedir}/src/main/resources</directory>
+			</resource>
+		</resources>
+		<testResources>
+			<testResource>
+				<directory>${basedir}/src/main/resources</directory>
+			</testResource>
+			<testResource>
+				<directory>${basedir}/src/test/resources</directory>
+			</testResource>
+		</testResources>
+
 		<extensions>
 			<extension>
 				<groupId>org.apache.maven.wagon</groupId>
 				<artifactId>wagon-ssh</artifactId>
 				<version>2.6</version>
+			</extension>
+
+			<extension>
+				<groupId>org.apache.maven.wagon</groupId>
+				<artifactId>wagon-ftp</artifactId>
+				<version>1.0-beta-6</version>
 			</extension>
 		</extensions>
 
@@ -186,6 +206,39 @@
 					</dependency>
 				</dependencies>
 			</plugin>
+
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+				<version>2.6</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>instrument</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<argLine>-XX:MaxPermSize=4096m -Xmx4096m</argLine>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>findbugs-maven-plugin</artifactId>
+				<version>2.5.4</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>check</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<failOnError>false</failOnError>
+				</configuration>
+			</plugin>
+
 		</plugins>
 
 	</build>
@@ -224,6 +277,12 @@
 							<report>javadoc</report>
 						</reports>
 					</reportSet>
+					<reportSet>
+						<id>test-html</id>
+						<reports>
+							<report>test-javadoc</report>
+						</reports>
+					</reportSet>
 				</reportSets>
 			</plugin>
 
@@ -250,6 +309,59 @@
 						</reports>
 					</reportSet>
 				</reportSets>
+			</plugin>
+
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-report-plugin</artifactId>
+				<version>2.17</version>
+				<configuration>
+					<argLine>-XX:MaxPermSize=4096m -Xmx4096m</argLine>
+				</configuration>
+			</plugin>
+
+			<!-- test coverage report -->
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+				<version>2.6</version>
+			</plugin>
+
+			<!-- todos -->
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>taglist-maven-plugin</artifactId>
+				<version>2.4</version>
+				<configuration>
+					<tagListOptions>
+						<tagClasses>
+							<tagClass>
+								<displayName>Open issues in the code</displayName>
+								<tags>
+									<tag>
+										<matchString>TODO</matchString>
+										<matchType>exact</matchType>
+									</tag>
+									<tag>
+										<matchString>FIXME</matchString>
+										<matchType>exact</matchType>
+									</tag>
+									<tag>
+										<matchString>XXX</matchString>
+										<matchType>exact</matchType>
+									</tag>
+								</tags>
+							</tagClass>
+						</tagClasses>
+					</tagListOptions>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>findbugs-maven-plugin</artifactId>
+				<version>2.5.4</version>
 			</plugin>
 
 			<plugin>
@@ -454,6 +566,15 @@
 			<id>mvnrepository</id>
 			<name>mvnrepository</name>
 			<url>http://mvnrepository.com/artifact</url>
+		</repository>
+
+		<repository>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+			<id>apache</id>
+			<name>apache</name>
+			<url>http://repo.maven.apache.org/maven2</url>
 		</repository>
 
 	</repositories>
